package dk.sdu.sesem4.common.data.combat;

/**
 * Used to determine which weapon type is use
 */
public enum WeaponType {
	SWORD,
	ROCK,
	ARROW
}
